--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ function buildGlobe(year, N){
   // initialize globe once
   if(!globe){
     globe = Globe()(document.getElementById('globeViz'))
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
-      .bumpImageUrl('//unpkg.com/three-globe/example/img/earth-topology.png')
+      .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-dark.jpg')
+      .bumpImageUrl('https://unpkg.com/three-globe/example/img/earth-topology.png')
       .pointsData(points)
       .pointAltitude('size')
       .pointColor('color')
