--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
   <script src="https://unpkg.com/globe.gl"></script>
+  <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
   <style>
     :root{--accent:#f94144;--accent2:#ff7b00;--card:#fff;--muted:#556;}
     body{font-family:Inter,Arial;margin:0;background:linear-gradient(180deg,#f7fbff,#e8f0ff);color:#17324d}
@@ -47,7 +49,7 @@
   </div>
 
   <div class="grid" style="margin-top:16px">
-    <div class="card" id="visuals">
+    <div class="card">
       <h2 style="color:var(--accent)">Interactive Visuals</h2>
       <div class="controls">
         <label for="yearSelect">Choose year:</label>
@@ -61,14 +63,7 @@
         </select>
       </div>
 
-      <div class="controls" style="margin:8px 0;">
-        <label for="viewMode">View Mode:</label>
-        <select id="viewMode">
-          <option value="casesdeaths" selected>Cases & Deaths</option>
-          <option value="cfr">CFR (%)</option>
-        </select>
-      </div>
-
+      <div class="controls" style="margin:8px 0;"><label for="viewMode">View Mode:</label><select id="viewMode"><option value="casesdeaths" selected>Cases & Deaths</option><option value="cfr">CFR (%)</option></select></div>
       <div class="charts" style="margin-top:12px">
         <div class="chart-box">
           <h4 class="small">Cases share (pie)</h4>
@@ -80,9 +75,8 @@
         </div>
       </div>
 
-      <h4 style="margin-top:12px">Top N States (Cases bar chart)</h4>
-      <canvas id="barChart"></canvas>
-
+      <h4 style="margin-top:12px">2D India Map (cases by state)</h4>
+      <div id="indiaMap" style="height:420px"></div>
       <h4 style="margin-top:12px">3D Globe: size = cases, color = deaths</h4>
       <div id="globeViz"></div>
     </div>
@@ -122,7 +116,7 @@ function getTopStatesByYear(year, N){
   return arr.slice(0, N);
 }
 
-let pieChart,lineChart,barChart,globe;
+let pieChart,lineChart,globe;
 
 function buildPie(year, N){
   const top = getTopStatesByYear(year, N);
@@ -130,7 +124,10 @@ function buildPie(year, N){
   if(pieChart) pieChart.destroy();
   pieChart = new Chart(ctx, {
     type:'pie',
-    data:{labels: top.map(t=>t.state),datasets:[{data: top.map(t=>t.cases)}]},
+    data:{
+      labels: top.map(t=>t.state),
+      datasets:[{data: top.map(t=>t.cases)}]
+    },
     options:{plugins:{legend:{position:'bottom'}}}
   });
 }
@@ -190,17 +187,6 @@ function buildLine(N, viewMode){
   }
 }
 
-function buildBar(year, N){
-  const top = getTopStatesByYear(year, N);
-  const ctx = document.getElementById('barChart').getContext('2d');
-  if(barChart) barChart.destroy();
-  barChart = new Chart(ctx, {
-    type:'bar',
-    data:{labels: top.map(t=>t.state),datasets:[{label:'Cases',data: top.map(t=>t.cases),backgroundColor:'#f94144'}]},
-    options:{plugins:{legend:{display:false}},scales:{y:{beginAtZero:true,title:{display:true,text:'Cases'}}}}
-  });
-}
-
 function buildTable(N){
   const top = getTopStatesByYear("2024", N);
   const wrap = document.getElementById('tableWrap');
@@ -224,33 +210,62 @@ function buildGlobe(year, N){
   const points = top.map(d=>({
     lat: d.lat,
     lng: d.lng,
-    size: Math.max(0.8, Math.log(d.cases+1)/1.6),
+    size: Math.log(d.cases+1)/5, // scaled down candles
     color: d.deaths>10 ? 'rgba(244,65,68,0.9)' : (d.deaths>2 ? 'rgba(255,160,70,0.9)' : 'rgba(100,200,120,0.9)'),
     name: d.state,
     cases: d.cases,
     deaths: d.deaths
   }));
+
   if(!globe){
     globe = Globe()(document.getElementById('globeViz'))
-      .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-dark.jpg')
+      .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-blue-marble.jpg') // brighter earth
       .bumpImageUrl('https://unpkg.com/three-globe/example/img/earth-topology.png')
-      .pointsData(points)
       .pointAltitude('size')
       .pointColor('color')
-      .pointLabel(p=>`${p.name}\nCases: ${p.cases}\nDeaths: ${p.deaths}`);
+      .pointsData(points)
+      .pointLabel(p=>`${p.name}\nCases: ${p.cases}\nDeaths: ${p.deaths}`)
+      // add labels permanently
+      .labelsData(points)
+      .labelLat('lat')
+      .labelLng('lng')
+      .labelText(d => d.name)
+      .labelSize(1.5)
+      .labelColor(() => 'white')
+      .labelDotRadius(0.2);
   } else {
-    globe.pointsData(points);
+    globe.pointsData(points).labelsData(points);
   }
+}
+
+function buildIndiaMap(year,N){
+  const top = getTopStatesByYear(year,N);
+  const states = top.map(d=>d.state);
+  const cases = top.map(d=>d.cases);
+  const data = [{
+    type: 'choropleth',
+    locationmode: 'country names',
+    locations: states,
+    z: cases,
+    colorscale: 'Reds',
+    colorbar: {title: 'Cases'},
+    text: states.map((s,i)=>s + "<br>Cases: " + cases[i]),
+    hoverinfo: 'text'
+  }];
+  const layout = {
+    geo: {scope: 'asia', projection: {type: 'mercator'}, center: {lat:22,lng:80}, lonaxis:{range:[65,95]}, lataxis:{range:[7,37]}},
+    margin:{l:0,r:0,t:0,b:0}
+  };
+  Plotly.newPlot('indiaMap', data, layout, {displayModeBar:false});
 }
 
 function updateVisuals(){
   const year = document.getElementById('yearSelect').value;
   const N = parseInt(document.getElementById('topN').value,10);
   buildPie(year,N);
-  const viewMode=document.getElementById('viewMode').value; 
-  buildLine(N,viewMode);
-  buildBar(year,N);
+  const viewMode=document.getElementById('viewMode').value; buildLine(N,viewMode);
   buildTable(N);
+  buildIndiaMap(year,N);
   buildGlobe(year,N);
 }
 
@@ -259,3 +274,4 @@ updateVisuals();
 </script>
 </body>
 </html>
+```
