--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="data:,">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://unpkg.com/three@0.146.0/build/three.min.js"></script>
-<script src="https://unpkg.com/globe.gl"></script>
 </head>
 <body>
 <header class="site-header">
@@ -25,7 +23,7 @@
     <button data-target="symptoms">Symptoms</button>
     <button data-target="prevention">Prevention</button>
     <button data-target="treatment">Treatment</button>
-    <button data-target="visuals">Visuals of Data</button>
+    <button data-target="charts">Visuals of Data</button>
   </div>
 </header>
 
@@ -117,12 +115,6 @@
     </div>
   </section>
 
-  <section id="visuals" class="card">
-    <h2>Visuals of Data</h2>
-    <canvas id="stars"></canvas>
-    <div id="globeViz" style="height:550px;position:relative;z-index:1"></div>
-  </section>
-
   <section id="final" class="card center">
     <button id="endBtn" class="end-btn">DOT</button>
     <div id="goodbye" class="goodbye"><span>🦟 Take care of yourself</span></div>
@@ -140,13 +132,14 @@ document.querySelectorAll('.nav button').forEach(btn=>{
   });
 });
 
+// Mosquito motion
 function animateMosquito(sel,speed,rx,ry,phase){
   const el=document.querySelector(sel);
   let t=phase;
   (function step(){
     t+=speed;
     const x=rx*Math.cos(t),y=ry*Math.sin(2*t);
-    el.style.transform=\`translate(\${x}px,\${y}px) rotate(\${10*Math.sin(3*t)}deg)\`;
+    el.style.transform=`translate(${x}px,${y}px) rotate(${10*Math.sin(3*t)}deg)`;
     requestAnimationFrame(step);
   })();
 }
@@ -154,38 +147,53 @@ animateMosquito('.mosq1',.01,60,15,0);
 animateMosquito('.mosq2',.012,80,20,1.3);
 animateMosquito('.mosq3',.009,50,12,2.1);
 
-const stars=document.getElementById('stars');
-const ctx=stars.getContext('2d');
-function drawStars(){
-  stars.width=stars.offsetWidth;stars.height=stars.offsetHeight;
-  ctx.fillStyle='black';ctx.fillRect(0,0,stars.width,stars.height);
-  for(let i=0;i<400;i++){
-    const x=Math.random()*stars.width,y=Math.random()*stars.height;
-    const a=Math.random();ctx.fillStyle=\`rgba(255,255,255,\${.3+.7*a})\`;
-    ctx.fillRect(x,y,1,1);
-  }
-}
-drawStars();setInterval(drawStars,3000);
-
-const world=Globe()(document.getElementById('globeViz'))
-  .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
-  .backgroundColor('rgba(0,0,0,0)')
-  .showAtmosphere(true)
-  .atmosphereColor('white')
-  .autoRotate(true).autoRotateSpeed(0.2);
-
-fetch('india_states_full.json').then(r=>r.json()).then(g=>{
-  const pts=g.features.map(f=>{
-    const st=f.properties.name;
-    const data=dengueDataAllStates[st]['2025'];
-    const color=data.cases>15000?'red':data.cases>8000?'orange':'green';
-    return {lat:f.geometry.coordinates[1],lng:f.geometry.coordinates[0],size:0.3,color,name:st};
-  });
-  world.pointsData(pts).pointAltitude('size').pointColor('color')
-       .labelsData(pts).labelLat(d=>d.lat).labelLng(d=>d.lng)
-       .labelText(d=>d.name).labelSize(0.9).labelColor(()=>"#fff");
+// Charts
+const yearSelect=document.getElementById('yearSelect');
+availableYears.forEach(y=>{
+  const opt=document.createElement('option');
+  opt.value=y; opt.textContent=y;
+  yearSelect.appendChild(opt);
 });
+yearSelect.value=Math.max(...availableYears);
 
+let pieChart,barChart,lineChart;
+function drawAll(year){
+  const entries=Object.keys(dengueDataAllStates).map(s=>({
+    state:s,
+    cases:dengueDataAllStates[s][year].cases,
+    deaths:dengueDataAllStates[s][year].deaths
+  }));
+  entries.sort((a,b)=>b.cases-a.cases);
+  const top10=entries.slice(0,10);
+  const labels=top10.map(e=>e.state);
+  const values=top10.map(e=>e.cases);
+
+  const pctx=document.getElementById('pieChart').getContext('2d');
+  if(pieChart) pieChart.destroy();
+  pieChart=new Chart(pctx,{type:'pie',data:{
+    labels:labels,
+    datasets:[{data:values,backgroundColor:labels.map((_,i)=>`hsl(${i*36},70%,55%)`)}]},
+    options:{plugins:{legend:{position:'bottom'}}}
+  });
+
+  const bctx=document.getElementById('barChart').getContext('2d');
+  if(barChart) barChart.destroy();
+  const sums=availableYears.map(y=>Object.values(dengueDataAllStates).reduce((a,s)=>a+s[y].cases,0));
+  barChart=new Chart(bctx,{type:'bar',data:{labels:availableYears,datasets:[{label:'Total Cases',data:sums,backgroundColor:'rgba(46,204,113,0.7)'}]},
+    options:{plugins:{legend:{display:false}},scales:{y:{title:{display:true,text:'Cases'}}}}
+  });
+
+  const lctx=document.getElementById('lineChart').getContext('2d');
+  if(lineChart) lineChart.destroy();
+  const deaths=availableYears.map(y=>Object.values(dengueDataAllStates).reduce((a,s)=>a+s[y].deaths,0));
+  lineChart=new Chart(lctx,{type:'line',data:{labels:availableYears,datasets:[{label:'Deaths',data:deaths,borderColor:'#e74c3c',tension:0.3}]},
+    options:{plugins:{legend:{display:false}},scales:{y:{title:{display:true,text:'Deaths'}}}}
+  });
+}
+drawAll(yearSelect.value);
+yearSelect.addEventListener('change',()=>drawAll(yearSelect.value));
+
+// DOT button
 const endBtn=document.getElementById('endBtn');
 const goodbye=document.getElementById('goodbye');
 endBtn.addEventListener('click',()=>{
