--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <header class="site-header">
   <div class="title-wrap">
     <div class="mosquitoes" aria-hidden="true">
-      <img src="mosquito.png" class="mosq mosq1">
-      <img src="mosquito.png" class="mosq mosq2">
-      <img src="mosquito.png" class="mosq mosq3">
+      <img src="mosquito.png.jpg" class="mosq mosq1">
+      <img src="mosquito.png.jpg" class="mosq mosq2">
+      <img src="mosquito.png.jpg" class="mosq mosq3">
     </div>
     <h1 id="siteTitle">Dengue Awareness</h1>
   </div>
