--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ const goodbye=document.getElementById('goodbye');
 endBtn.addEventListener('click',()=>{
   for(let i=0;i<3;i++){
     const el=document.createElement('img');
-    el.src='mosquito.png';
+    el.src='mosquito.png.jpg';
     el.className='mosq fly'+i;
     document.body.appendChild(el);
     setTimeout(()=>el.classList.add('toCenter'),i*300);
